deploy: a4dd5f0adbb3b5f5b2a822cb85b9490edc6b6cc4

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -4,9 +4,10 @@
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
 <title>The Financially Literate Kid</title>
-<meta name=description content>
+<meta name=keywords content>
+<meta name=description content=" - The Financially Literate Kid">
 <meta name=author content>
-<link rel=canonical href=https://www.finlitkid.com/>
+<link rel=canonical href=https://www.finlitkid.com/accounts/>
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.9f1d947375927e9847272b1f4e9be81336f539e513bf04d52cade31f81cad1af.css integrity="sha256-nx2Uc3WSfphHJysfTpvoEzb1OeUTvwTVLK3jH4HK0a8=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://www.finlitkid.com/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://www.finlitkid.com/favicon-16x16.png>
@@ -16,16 +17,15 @@
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.88.1">
-<link rel=alternate type=application/rss+xml href=https://www.finlitkid.com/index.xml>
-<link rel=alternate type=application/json href=https://www.finlitkid.com/index.json>
-<meta property="og:title" content="The Financially Literate Kid">
+<link rel=alternate type=application/rss+xml href=https://www.finlitkid.com/accounts/index.xml>
+<meta property="og:title" content>
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.finlitkid.com/">
+<meta property="og:url" content="https://www.finlitkid.com/accounts/">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="The Financially Literate Kid">
+<meta name=twitter:title content>
 <meta name=twitter:description content>
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"The Financially Literate Kid","url":"https://www.finlitkid.com/","description":"","thumbnailUrl":"https://www.finlitkid.com/favicon.ico","sameAs":[]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"","item":"https://www.finlitkid.com/accounts/"}]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
@@ -50,7 +50,7 @@
 </li>
 <li>
 <a href=https://www.finlitkid.com/accounts/ title=Accounts>
-<span>Accounts</span>
+<span class=active>Accounts</span>
 </a>
 </li>
 <li>
