deploy: b09d00ae5237ff3df4ee8e9547f813cd478f0ba4

--- a/index.html
+++ b/index.html
@@ -67,6 +67,28 @@
 </nav>
 </header>
 <main class=main>
+<article class=first-entry>
+<header class=entry-header>
+<h2>A's Junior ISA
+</h2>
+</header>
+<section class=entry-content>
+<p>Record of the contributions and valuation of A’s JISA account</p>
+</section>
+<footer class=entry-footer>September 4, 2021&nbsp;·&nbsp;1 min</footer>
+<a class=entry-link aria-label="post link to A's Junior ISA" href=https://www.finlitkid.com/accounts/a/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
+<h2>Z's Junior ISA
+</h2>
+</header>
+<section class=entry-content>
+<p>Record of the contributions and valuation of Z’s JISA account</p>
+</section>
+<footer class=entry-footer>September 4, 2021&nbsp;·&nbsp;1 min</footer>
+<a class=entry-link aria-label="post link to Z's Junior ISA" href=https://www.finlitkid.com/accounts/z/></a>
+</article>
 </main>
 <footer class=footer>
 <span>&copy; 2021 <a href=https://www.finlitkid.com/>The Financially Literate Kid</a></span>
